# TTS_Lab

./: .gitignore  CMakeLists.txt  TTS_Lab.sln
TTS_Lab/: Segments.txt  StringHash.h  TTS_Lab.cpp  TTS_Lab.h  TTS_Lab.qrc  TTS_Lab.ui  TTS_Lab.vcxproj  TTS_Lab.vcxproj.filters  TextToSpeechEngine.cpp  TextToSpeechEngine.h  main.cpp
TTS_Lab/GeneratedFiles/: qrc_TTS_Lab.cpp  ui_TTS_Lab.h
TTS_Lab/GeneratedFiles/Debug/: moc_TTS_Lab.cpp
TTS_Lab/GeneratedFiles/Release/: moc_TTS_Lab.cpp
